--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -101,6 +101,10 @@ Customizing abstract [styles](/docs/styles) for your design system.
 Customizing [variables](/docs/variables) for your design tokens.
 <VariablesOverview />
 
+---
+
+## Settings
+
 ### `.extends`
 Extend custom or external configuration.
 <DocProp defaultValue="undefined" types={["any[]"]} />
