--- a/website/app/[locale]/(root)/docs/styles/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/styles/components/Overview.mdx
@@ -1,18 +1,12 @@
-```js name=master.css.js
-export default {
-    styles: {
-        card: {
-            '': 'bg:white r:8',
-            header: 'object:cover w:full',
-            content: 'p:15'
-        }
-    }
-}
-```
-Apply your custom styles:
-```html
-<div class="card">
-    <img class="card-header" src="…" />
-    <div class="card-content"></div>
-</div>
-```
+<Demo>
+    <button className="center-content inline-flex bg:invert fg:invert font:14 font:medium h:10x px:4x r:2x">Submit</button>
+</Demo>
+<Code lang="js" name="master.css.js">{require('!!raw-loader!../tests/add-a-style/master.css.js').default}</Code>
+Apply the style:
+<Code lang="html">{require('!!raw-loader!../tests/add-a-style/template.html').default}</Code>
+<details open={props.opened}>
+    <summary>Generated CSS</summary>
+    <div>
+        <Code lang="css" beautify>{require('!!raw-loader!../tests/add-a-style/generated.css').default}</Code>
+    </div>
+</details>
