Docs: Update **Styles** documentation

--- a/website/app/[locale]/(root)/docs/styles/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/styles/components/Overview.mdx
@@ -1,8 +1,8 @@
+<Code lang="js" name="master.css.js">{require('!!raw-loader!../tests/add-a-style/master.css.js').default}</Code>
+Apply the `btn` style to the button element:
 <Demo>
     <button className="center-content inline-flex bg:invert fg:invert font:14 font:medium h:10x px:4x r:2x">Submit</button>
 </Demo>
-<Code lang="js" name="master.css.js">{require('!!raw-loader!../tests/add-a-style/master.css.js').default}</Code>
-Apply the style:
 <Code lang="html">{require('!!raw-loader!../tests/add-a-style/template.html').default}</Code>
 <details open={props.opened}>
     <summary>Generated CSS</summary>
