--- a/website/app/[locale]/(root)/docs/installation/(tabs)/cdn/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/cdn/content.mdx
@@ -1,6 +1,5 @@
 Copy and paste [CDNs](/docs/installation#cdn-providers) to instantly launch the [runtime engine](/docs/rendering-modes/runtime-rendering) in your browser out of the box.
-
-<StepSection className="mt:12x">
+<StepSection>
     <Step>
         ### <StepNum />Start in one step
         Copy and paste to start styling your first element with Master CSS!
