--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -95,7 +95,18 @@ Master CSS is the first language to highlight class names fully, making identify
 </Demo>
 This feature is included in the [Master CSS Language Service](/docs/language-service).
 
-### 🚧 Code Linting
+### Code Linting
+Have you ever felt anxious about adding styles to class attributes? Master CSS was the first to introduce [syntax validation](/docs/code-linting#syntax-error-checks) of classes in template markup, which helps you find errors early before building and dramatically improves the developer experience.
+<video className="aspect:2/1 r:5 max-w:screen-xs w:full" autoPlay loop muted playsInline>
+    <source src="/videos/syntax-error-checks.webm" type="video/webm" />
+</video>
+(x) <span className="text:error">Invalid value for \`width\` property.</span>
+```html
+<div class="**width:**">…</div>
+```
+This is just a piece of cake; we also allow you to **enforce consistent class ordering**, **legitimate class checks**, **class collision checks**, and checks for JavaScript utilities like **`clsx()`**.
+
+To learn more, check out the [Code Linting](/docs/code-linting) documentation.
 
 ### Minimal CSS on the market
 Initially, Master CSS was intended to create a CSS engine for production browser runtimes, so we concentrated on performance such as syntax parsing, rule generation, cache sharing, and even browser rendering.
