--- a/website/app/[locale]/(root)/docs/introduction/components/Comparisons.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/components/Comparisons.mdx
@@ -129,6 +129,18 @@ export const bootstrap = brands.find(({ name }) => name === 'Bootstrap')
             <td colSpan={4}><small>The ability to customize tokens</small></td>
         </tr>
         <tr>
+            <th>[Breakpoints](/docs/responsive-design) and [Screens](/docs/screens)</th>
+            <td>11</td>
+            <td>5</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <th>[Colors](/docs/colors)</th>
+            <td>~222</td>
+            <td>~244</td>
+            <td>~100</td>
+        </tr>
+        <tr>
             <th>[Variables with Modes](/docs/variables-with-modes)</th>
             <td><InlineGood /></td>
             <td><InlineBad /></td>
@@ -141,22 +153,16 @@ export const bootstrap = brands.find(({ name }) => name === 'Bootstrap')
             <td><InlineBad /></td>
         </tr>
         <tr>
+            <th>[Selectors](/docs/variables-with-modes)</th>
+            <td><InlineGood /></td>
+            <td><InlineBad /></td>
+            <td><InlineBad /></td>
+        </tr>
+        <tr>
             <th>[Abstract Styles](/docs/styles)</th>
             <td><InlineGood /></td>
             <td><InlineWarn />`@apply`</td>
             <td><InlineBad />Predefined</td>
-        </tr>
-        <tr>
-            <th>[Breakpoints](/docs/responsive-design) and [Screens](/docs/screens)</th>
-            <td>11</td>
-            <td>5</td>
-            <td>5</td>
-        </tr>
-        <tr>
-            <th>[Colors](/docs/colors)</th>
-            <td>~222</td>
-            <td>~244</td>
-            <td>~100</td>
         </tr>
         <tr>
             <td colSpan={4}><small>Language Service</small></td>
