Update category names in metadata.ts files

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -40,7 +40,7 @@ Our goal for our upcoming v2 docs is to present a comprehensive and elegantly cr
             <Documents category='Fundamentals' />
             <Documents category='Production Optimization' />
             <Documents category='Design Variables' />
-            <Documents category='Configuration' />
+            <Documents category='Custom Syntax' />
             <Documents category='API Reference' />
             <Documents category='Syntax' />
         </table>
