Update the init command to `npx @master/css@rc init`

--- a/website/app/[locale]/(root)/docs/installation/(tabs)/general/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/general/content.mdx
@@ -17,11 +17,11 @@ The easiest way to use Master CSS from scratch is to initialize the [runtime eng
     <Step $row>
         <StepL>
             ### <StepNum />Initialize configuration file
-            Run `npx @master/css init` to create a configuration file [master.css.js](/docs/configuration).
+            Run `npx @master/css@rc init` to create a configuration file [master.css.js](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx @master/css init
+            npx @master/css@rc init
             ```
         </StepR>
     </Step>
