--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -10,7 +10,7 @@ import StylesOverview from '../styles/components/Overview.mdx'
 ## Setup [sr-only]
 
 ```bash name=Terminal
-npx @master/css init
+npx @master/css@rc init
 ```
 It generates a top-level configuration file `master.css.{js,mjs,ts}` based on the characteristics of your project.
 
@@ -18,7 +18,7 @@ It generates a top-level configuration file `master.css.{js,mjs,ts}` based on th
 Specify creating a `master.css.mjs` file in ECMAScript Modules format. If `package.json` is set `"type": "module"` will be enabled automatically.
 <DocProp defaultValue="false" types={['boolean']} />
 ```bash name=Terminal
-npx @master/css init **--esm**
+npx @master/css@rc init **--esm**
 ```
 <details>
     <summary>View the generated file</summary>
@@ -33,7 +33,7 @@ npx @master/css init **--esm**
 Specify creating a `master.css.js` file in CommonJS format.
 <DocProp defaultValue="false" types={['boolean']} />
 ```bash name=Terminal
-npx @master/css init **--cjs**
+npx @master/css@rc init **--cjs**
 ```
 <details>
     <summary>View the generated file</summary>
@@ -48,7 +48,7 @@ npx @master/css init **--cjs**
 Specify creating a `master.css.ts` file in TypeScript format. Automatically enabled if `tsconfig.json` exists.
 <DocProp defaultValue="false" types={['boolean']} />
 ```bash name=Terminal
-npx @master/css init **--ts**
+npx @master/css@rc init **--ts**
 ```
 <details>
     <summary>View the generated file</summary>
@@ -63,7 +63,7 @@ npx @master/css init **--ts**
 Override the existing Master CSS config file.
 <DocProp defaultValue="false" types={['boolean']} />
 ```bash name=Terminal
-npx @master/css init **--override**
+npx @master/css@rc init **--override**
 ```
 
 ---
