--- a/website/app/[locale]/(root)/docs/installation/astro/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/astro/content.mdx
@@ -61,11 +61,11 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
     <Step $row>
         <StepL>
             ### <StepNum />Initialize configuration file
-            Run `npx @master/css init` to create a configuration file [master.css.ts](/docs/configuration).
+            Run `npx @master/css@rc init` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx @master/css init
+            npx @master/css@rc init
             ```
         </StepR>
     </Step>
