--- a/website/app/[locale]/(root)/docs/installation/nextjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/runtime-rendering/content.mdx
@@ -78,11 +78,11 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
     <Step $row>
         <StepL>
             ### <StepNum />Initialize configuration file
-            Run `npx @master/css init` to create a configuration file [master.css.ts](/docs/configuration).
+            Run `npx @master/css@rc init` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx @master/css init
+            npx @master/css@rc init
             ```
         </StepR>
     </Step>
