--- a/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
@@ -64,11 +64,11 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     <Step $row>
         <StepL>
             ### <StepNum />Initialize configuration file
-            Run `npx @master/css init` to create a configuration file [master.css.ts](/docs/configuration).
+            Run `npx @master/css@rc init` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx @master/css init
+            npx @master/css@rc init
             ```
         </StepR>
     </Step>
