New: `npm init @master/css`

--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -24,7 +24,7 @@ npx @master/css@rc init **--esm**
     <summary>View the generated file</summary>
     <div>
         <Code lang="js" name="master.css.mjs">
-            {require('!!raw-loader!../../../../../../packages/css/src/master.css.mjs.txt').default}
+            {require('../../../../../../packages/create/src/master.css.mjs')}
         </Code>
     </div>
 </details>
@@ -39,7 +39,7 @@ npx @master/css@rc init **--cjs**
     <summary>View the generated file</summary>
     <div>
         <Code lang="js" name="master.css.js">
-            {require('!!raw-loader!../../../../../../packages/css/src/master.css.js.txt').default}
+            {require('../../../../../../packages/create/src/master.css.js.js')}
         </Code>
     </div>
 </details>
@@ -54,7 +54,7 @@ npx @master/css@rc init **--ts**
     <summary>View the generated file</summary>
     <div>
         <Code lang="js" name="master.css.ts">
-            {require('!!raw-loader!../../../../../../packages/css/src/master.css.ts.txt').default}
+            {require('../../../../../../packages/create/src/master.css.ts.js')}
         </Code>
     </div>
 </details>
