--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/static-extraction/content.mdx
@@ -62,11 +62,11 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     <Step $row>
         <StepL>
             ### <StepNum />Initialize configuration file
-            Run `npx @master/css@rc init` to create a configuration file [master.css.ts](/docs/configuration).
+            Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx @master/css@rc init
+            npm create @master/css@rc
             ```
         </StepR>
     </Step>
